resources/css/index.css
* {
  box-sizing: border-box;
}

html {
  font-family: 'DM Sans', sans-serif;
  font-size: 18px;
}

body {
  background-color: #F8E9DD;
  width: 100vw;
  min-width: 100%;
  height: 100vh;
  min-height: 100%;
  position: relative;
}

h1, h3 {
  font-size: 1.75rem;
  font-weight: 700;
}

h2 {
  font-size: 2.67rem;
  font-weight: 700;
}

p {
  color: #92857A;
}

.app-container {
  width: 30rem;
  height: 36.7rem;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

header {
  background-color: #EC755d;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-inline: 2.2rem;
  padding-block: 1.9rem;
  color: #FFF;
  border-radius: 1.25rem;
  margin-bottom: 1.25rem;
}

header p {
  color: inherit;
  margin-bottom: 0.75rem;
}

main {
  background-color: #FFFBF6;
  padding: 2.25rem;
  color: #382314;
  border-radius: 1.25rem;
}

main h1 {
  margin-bottom: 3rem;
}

#chart {
  min-height: 178px;
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  grid-template-rows: auto 1rem;
  gap: 0.75rem;
  align-items: end;
  text-align: center;
  margin-bottom: 2rem;
}

.exp-col {
  position: relative;
  min-height: 0.1rem;
  /* height: 3rem; */
  width: 100%;
  background-color: #EC755D;
  border-radius: 0.35rem;
  cursor: pointer;
}

.exp-col:hover {
  background-color: #FF9B86;
}

.col-label {
  position: absolute;
  min-height: 1.5rem;
  min-width: 4rem;
  padding-inline: 0.45rem;
  padding-block: 0.5rem;
  color: #FFF;
  background-color: #382314;
  border-radius: 0.35rem;
  top: -2.5rem;
  left: -0.45rem;
}

.weekday {
  font-size: 0.83rem;
  color: #92857A;
  cursor: pointer;
}

hr {
  border:1px solid #F8E9DD;
  margin-bottom: 2rem;
}

.summary {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}

.summary p {
  margin-bottom: 0.5rem;
}

.delta {
  text-align: right;
}

.delta p:first-child {
  color: #382314;
  font-weight: 700;
}

.delta p:last-child {
  margin: 0;
}

.grid-test {
  border: 1px solid black;
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  grid-template-rows: auto 2rem;
  gap: 0.75rem;
  align-items: end;
  text-align: center;
}

.attribution { 
  font-size: 11px; 
  text-align: center; 
}
.attribution a { 
  color: hsl(228, 45%, 44%); 
}

.current-day {
  background-color: #76B5BC;
}

.current-day:hover {
  background-color: #B4E0E5;
}

.hidden {
  display: none;
}

